@@ -44,8 +44,8 @@
 
 #define TWITTER_PROTOCOL_ID "prpl-twitter"
 
-#define TWITTER_OAUTH_KEY "hrL4RlfT8MVOWbDdeY0EQ"
-#define TWITTER_OAUTH_SECRET "QXromX9owFx7Gx0ma8LK0fApX0kVqYf1CXWuGRyuP4"
+#define TWITTER_OAUTH_KEY "9hDKG0Lty62lPca2XoA"
+#define TWITTER_OAUTH_SECRET "WmCXa0M1Q5k89WTZhnqUhxaebvF3faVkzGWGiwpoZkc"
 
 /* We'll handle TWITTER_URI://foo as an internal action */
 #define TWITTER_URI "prpltwtr"
